--- a/example/index.css
+++ b/example/index.css
@@ -1,10 +1,10 @@
 
 
-@media (max-width: 640px) {
-    .player {
-        width: 320px;
-        height: 240px;
-    }
+.player {
+    width: 320px;
+    height: 240px;
+    margin: 4px;
+    border: 1px solid gray;
 }
 
 
