--- a/example/index.css
+++ b/example/index.css
@@ -1,13 +1,5 @@
 
 
-.player {
-    width: 320px;
-    height: 240px;
-    margin: 4px;
-    border: 1px solid gray;
-}
-
-
 .main-page {
     display: inline-grid;
     width: 100%;
@@ -162,6 +154,26 @@ input:checked + .slider:before {
 .slider.round:before { border-radius: 50%; }
 
 
-.videoroom-container {
+.player-list {
     display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.player-wrapper {
+    display: inline-block;
+    width: 330px;
+    margin: 0px;
+    border: 0px;
+}
+
+.player {
+    width: 320px;
+    height: 240px;
+    margin: 4px;
+    border: 1px solid gray;
+}
+
+.player-name {
+    width: 320px;
 }
