--- a/example/index.css
+++ b/example/index.css
@@ -156,6 +156,10 @@ input:checked + .slider:before {
 
 .player-list {
     display: none;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 0px;
+    margin-bottom: 0px;
     width: 100%;
     height: 100%;
 }
