--- a/example/index.css
+++ b/example/index.css
@@ -181,3 +181,13 @@ input:checked + .slider:before {
 .player-name {
     width: 320px;
 }
+
+.continue-dialog {
+    display: none;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    width: 100%;
+    height: 100%;
+}
