--- a/example/index.css
+++ b/example/index.css
@@ -182,6 +182,10 @@ input:checked + .slider:before {
     width: 320px;
 }
 
+.continue-button {
+    font-size: 400%;
+}
+
 .continue-dialog {
     display: none;
     margin-top: 20px;
@@ -190,4 +194,6 @@ input:checked + .slider:before {
     margin-bottom: 0px;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
 }
