--- a/example/index.css
+++ b/example/index.css
@@ -11,28 +11,35 @@
 
 .top-bar { background-color: lightgray; }
 .top-bar > * { display: inline-block; }
-.logo-div {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    margin-left: 10px;
-    margin-top: 10px;
+
+
+.logo-name-joinleave {
+    display: inline-grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, min-content);
+    background-color: lightgray;
 }
-.logo-div > * { display: inline; }
+
+.logo-name-joinleave > * {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.logo-div {
+    margin-top: 10px;
+    display: inline-grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, min-content);
+}
 .logo {
-    height: 60px;
+    height: 40px;
+    justify-self: end;
 }
 .logo-label {
-    font-size: 100%;
+    font-size: 65%;
     text-align: right;
 }
 
-
-/* .room-user-join-grid { */
-/*     display: inline-grid; */
-/*     grid-template-columns: repeat(4, 1fr); */
-/*     grid-template-rows: repeat(2, 1fr); */
-/*     column-gap: 50px; */
-/* } */
 
 .text-entry {
     display: inline-block;
@@ -47,30 +54,38 @@
     grid-template-rows: 1fr;
 }
 
-.controls-and-rooms {
+.left-bar {
     display: inline-grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, min-content);
+    grid-template-rows: repeat(3, min-content);
     height: min-content;
 }
 
-.controls-and-rooms > * {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 0px;
-    margin-bottom: 0px;
+.left-bar > * {
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
     height: min-content;
+    background-color: lightgray;
 }
 
-.user-name-and-label {
+.left-bar > * > * {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.user-name-join-leave {
     display: inline-grid;
-    width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, min-content);
 }
 
-.user-name-and-label > * {
-    margin-right: 20px;
+.user-name-and-label {
+    display: inline-grid;
+    /* width: 100%; */
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, min-content);
 }
 
 .entry-label {
@@ -83,29 +98,25 @@
 
 .join-leave-buttons {
     display: inline-grid;
-    width: 100%;
+    /* width: 100%; */
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
+    margin-bottom: 5px;
 }
 
 .join-leave-buttons > * {
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-right: 20px;
-    margin-bottom: 0px;
-    /* width: min-content; */
-    /* height: min-content; */
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .controls {
-    background-color: lightgray;
     display: inline-grid;
     grid-template-columns: min-content auto;
     grid-template-rows: repeat(5, 1fr);
 }
 
 .controls > * {
-    margin-left: 10px;
+    /* margin-left: 10px; */
 }
 
 .controls-all-cols {
@@ -116,7 +127,7 @@
 .control-label {
     color: white;
     width: max-content;
-    margin-right: 10px;
+    /* margin-right: 10px; */
 }
 
 .rooms {
