--- a/example/index.css
+++ b/example/index.css
@@ -74,7 +74,8 @@ body {
 
 .rooms-btns {
     display: flex;
-    gap: 15px;
+    gap: 2px;
+    flex-wrap: wrap;
 }
 
 .rooms-button {
@@ -86,6 +87,8 @@ body {
     color: #fff;
     text-align: center;
     padding: 0;
+    width: 55px;
+    width: 70px;
 }
 
 .rooms-button circle {
@@ -111,15 +114,15 @@ input#username {
     background-image: url(/assets/controls-bg-m.jpg);
     background-position: center right;
     background-size: cover;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
     overflow-y: scroll;
-    padding: 2rem;
+    padding: 0 2rem;
     max-height: 160px;
 }
 
 .controls-and-rooms>div {
     flex: 1;
-    padding: 2rem 0;
+    padding: 1.6rem 0;
     scroll-snap-align: center;
 
 }
