--- a/example/index.css
+++ b/example/index.css
@@ -111,7 +111,7 @@ input#username {
 
 .controls-and-rooms {
     background: #000;
-    background-image: url(controls-bg-m.jpg);
+    background-image: url(/assets/controls-bg-m.jpg);
     background-position: center right;
     background-size: cover;
     scroll-snap-type: y proximity;
@@ -143,7 +143,8 @@ input#username {
 }
 
 [type=button]:not(:disabled):hover circle,
-button:not(:disabled):hover circle {
+button:not(:disabled):hover circle,
+.rooms-button[style="background: rgb(0, 123, 255);"] circle {
     fill: #f1a9d7;
 }
 
@@ -346,7 +347,7 @@ input[type=range]::-ms-fill-upper {
 
     .controls-and-rooms {
         background: #000;
-        background-image: url(controls-bg-m.jpg);
+        background-image: url(/assets/controls-bg-m.jpg);
         background-position: center right;
         background-size: cover;
         display: flex;
