--- a/example/index.css
+++ b/example/index.css
@@ -1,6 +1,6 @@
 :root {
-    --accent: #E0FFFF;
-    --accent_two: #00FFFF
+    --accent: #7FBFFF;
+    --accent_two: #6D6CEF
 }
 
 @font-face {
@@ -127,7 +127,7 @@ input#username {
 
 .controls-and-rooms>div {
     flex: 1;
-    padding: 1.6rem 0;
+    padding: 1.25rem 0;
     scroll-snap-align: center;
 }
 
@@ -153,7 +153,7 @@ input#username {
 [type=button]:not(:disabled):hover circle,
 button:not(:disabled):hover circle,
 .rooms-button[style="background: rgb(0, 123, 255);"] circle {
-    fill: #f1a9d7;
+    fill: #7FBFFF;
 }
 
 .entry-label {
